Fix compilation.